--- a/package.json
+++ b/package.json
@@ -12,14 +12,19 @@
     "@react-navigation/native": "^6.1.7",
     "@react-navigation/native-stack": "^6.9.13",
     "expo": "~49.0.8",
+    "expo-font": "^11.4.0",
     "expo-linear-gradient": "^12.3.0",
     "expo-status-bar": "~1.6.0",
+    "formik": "^2.4.4",
     "react": "18.2.0",
     "react-native": "0.72.4",
+    "react-native-circular-progress": "^1.3.9",
+    "react-native-dialog": "^9.3.0",
     "react-native-linear-gradient": "^2.8.3",
     "react-native-progress": "^5.0.0",
-    "react-native-safe-area-context": "^4.7.2",
-    "react-native-screens": "^3.25.0"
+    "react-native-safe-area-context": "4.6.3",
+    "react-native-screens": "~3.22.0",
+    "react-native-svg": "^13.13.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
