--- a/package.json
+++ b/package.json
@@ -18,11 +18,11 @@
     "expo-blur": "^12.4.1",
     "expo-font": "^11.4.0",
     "expo-linear-gradient": "^12.3.0",
-    "expo-secure-store": "^12.5.0",
+    "expo-secure-store": "~12.3.1",
     "expo-status-bar": "~1.6.0",
     "formik": "^2.4.4",
     "react": "18.2.0",
-    "react-native": "0.72.4",
+    "react-native": "0.72.6",
     "react-native-circular-progress": "^1.3.9",
     "react-native-dialog": "^9.3.0",
     "react-native-dotenv": "^3.4.9",
@@ -30,7 +30,7 @@
     "react-native-progress": "^5.0.0",
     "react-native-safe-area-context": "4.6.3",
     "react-native-screens": "~3.22.0",
-    "react-native-svg": "^13.13.0"
+    "react-native-svg": "13.9.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
